--- a/MusicIndex.html
+++ b/MusicIndex.html
@@ -612,7 +612,7 @@
                   this.visibleType2 = false;
                   this.$message.success("密码修改成功！");
 
-                  window.location = 'http://106.53.61.91:8990/clientLogin.html?type=' + this.axiosUrl
+                  window.location = 'http://106.53.61.91:8990/html/clientLogin.html?type=' + this.axiosUrl
 
                 } else {
                   this.$message.error("密码修改失败！");
