--- a/clientLogin(0322).html
+++ b/clientLogin(0322).html
@@ -170,7 +170,7 @@
                 if (res.data.status == 0) {
                   localStorage.setItem("admin", JSON.stringify(tempdata));
                   // var tempwindow = window.open("_blank");
-                   window.location = 'http://106.53.61.91:8990/MusicIndex.html?type=' + this.axiosUrl
+                   window.location = 'http://106.53.61.91:8990/html/MusicIndex.html?type=' + this.axiosUrl
 
                  // window.location = _this.serverUrl + '/MusicIndex.html?type=' + this.axiosUrl
                   // "http://47.114.141.171:8990/MusicIndex.html?type=" + this.axiosUrl;
