--- a/clientLogin.html
+++ b/clientLogin.html
@@ -111,7 +111,7 @@
   /* 要给背景图片设置宽高 */
   width: 100%;
   height: 100%;
-  background-image: url("http://106.53.61.91:8990/login.webp");
+  background-image: url("http://106.53.61.91:8990/html/login.webp");
   background-size: 100% 100%;
   background-repeat: no-repeat;
 }
@@ -308,7 +308,7 @@
                 console.log(tempdata)
                 if (res.data.status == 0) {
                   localStorage.setItem("admin", JSON.stringify(tempdata));
-                   window.location = 'http://106.53.61.91:8990/MusicIndex.html?type=' + this.axiosUrl
+                   window.location = 'http://106.53.61.91:8990/html/MusicIndex.html?type=' + this.axiosUrl
 
                 }
                 else {
