--- a/clientLogin.html
+++ b/clientLogin.html
@@ -190,7 +190,8 @@
           requiredTwoStepCaptcha: false,
           stepCaptchaVisible: false,
           // form: this.$form.createForm(this),
-          serverUrl:"106.53.61.91:6325/rylBGM/account",
+          // serverUrl:"106.53.61.91:6325/rylBGM/account",
+           serverUrl:"http://47.114.141.171:6325",
 
           // 表单要提交的数据
       form: {
@@ -234,51 +235,7 @@
       },
 
       methods: {
-        // handleSubmit(e) {
-        //   let _this = this
-        //   e.preventDefault();
-        //   this.form.validateFields((err, values) => {
-        //     if (!err) {
-
-        //       axios({
-        //         headers: {
-        //           'Content-Type': 'multipart/form-data'
-        //         },
-        //         method: 'post',
-        //         // url: _this.serverUrl + '/signIn',
-        //         url:'http://106.53.61.91:6325/rylBGM/account/signIn',
-                
-        //         data: {
-        //           user: values.admin,
-        //           pwd: values.pw
-        //         }
-        //       }).then(res => {
-        //         console.log( res.data)
-        //         let tempdata = res.data.data
-        //         console.log(tempdata)
-        //         if (res.data.status == 0) {
-        //           localStorage.setItem("admin", JSON.stringify(tempdata));
-        //           // var tempwindow = window.open("_blank");
-        //            window.location = 'http://106.53.61.91:8990/MusicIndex.html?type=' + this.axiosUrl
-
-        //          // window.location = _this.serverUrl + '/MusicIndex.html?type=' + this.axiosUrl
-        //           // "http://47.114.141.171:8990/MusicIndex.html?type=" + this.axiosUrl;
-        //         }
-        //         //this.queryCopyList = tempdata.data
-        //         // this.data.map((item,index)=>{
-        //         //   item['nums']=index
-        //         //   console.log(this.data)
-
-        //         // })
-        //         else {
-        //           this.$message.error("密码错误，请重新登陆！");
-
-        //         }
-
-        //       });
-        //     }
-        //   });
-        // },
+  
         onSubmit() {
       //表单验证
       //用axios向后端发送ajax请求
@@ -295,8 +252,7 @@
                   'Content-Type': 'multipart/form-data'
                 },
                 method: 'post',
-                // url: _this.serverUrl + '/signIn',
-                url:'http://106.53.61.91:6325/rylBGM/account/signIn',
+                url:`${this.serverUrl}/rylBGM/account/signIn`,
                 
                 data: {
                   user: this.form.username,
@@ -308,7 +264,7 @@
                 console.log(tempdata)
                 if (res.data.status == 0) {
                   localStorage.setItem("admin", JSON.stringify(tempdata));
-                   window.location = 'http://106.53.61.91:8990/html/MusicIndex.html?type=' + this.axiosUrl
+                   window.location = `${this.serverUrl}/html/MusicIndex.html?type=` + this.axiosUrl
 
                 }
                 else {
