--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
   <link rel="stylesheet" href="../src/common/css/common.css">
   <link rel="stylesheet" href="../src/common/css/reset.css">
   <title>
-    <%= htmlWebpackPlugin.options.title %>
-  </title>
+    绕梁音后台管理系统
+    </title>
   <style>
     html{
       height: 100%;
@@ -23,10 +23,6 @@
 </head>
 
 <body>
-  <noscript>
-    <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
-        Please enable it to continue.</strong>
-  </noscript>
   <div id="app"></div>
   <!-- built files will be auto injected -->
 </body>
