客户查询功能

--- a/MusicIndex.html
+++ b/MusicIndex.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.10/vue.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/ant-design-vue@1.4.10/dist/antd.min.js"></script>
+  <script src="https://cdn.staticfile.org/vue/2.5.17/vue.min.js"></script>
+  <!--<script src="https://cdn.jsdelivr.net/npm/ant-design-vue@1.4.10/dist/antd.min.js"></script>
   <script src="https://unpkg.com/ant-design-vue@1.7.2/dist/antd.min.js"></script> 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/ant-design-vue@1.4.10/dist/antd.min.css" rel="stylesheet" type="text/css" />
@@ -15,11 +15,14 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
   <script src='base.js'></script> -->
    
-  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <!-- <script src="https://cdn.bootcdn.net/ajax/libs/vue/2.6.5/vue.common.dev.js"></script>
+    
+    <script src="https://cdn.bootcdn.net/ajax/libs/vue/2.6.9/vue.common.dev.js"></script> -->
 
    
-  <script src="https://cdn.jsdelivr.net/npm/ant-design-vue@1.4.10/dist/antd.min.js"></script>
-   
+  <!-- <script src="https://cdn.jsdelivr.net/npm/ant-design-vue@1.4.10/dist/antd.min.js"></script> -->
+  <script src="https://cdn.staticfile.org/ant-design-vue/1.5.0/antd.min.js"></script>
+
   <!-- <script src="https://unpkg.com/ant-design-vue@1.7.2/dist/antd.min.js"></script> -->
    
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.js"></script> -->
@@ -27,8 +30,9 @@
   <script src="https://cdn.bootcss.com/moment.js/2.22.1/moment.js"></script>
 
    
-  <link href="https://cdn.jsdelivr.net/npm/ant-design-vue@1.4.10/dist/antd.min.css" rel="stylesheet" type="text/css" />
-   
+  <!-- <link href="https://cdn.jsdelivr.net/npm/ant-design-vue@1.4.10/dist/antd.min.css" rel="stylesheet" type="text/css" /> -->
+  <link href="https://cdn.staticfile.org/ant-design-vue/1.5.0/antd.min.css" rel="stylesheet" type="text/css" />
+
   <script src="https://cdn.bootcdn.net/ajax/libs/axios/0.21.0/axios.js"></script>
 
    
@@ -304,7 +308,7 @@
           saveUrl: "",
           songText: "",
           severUrl: "http://47.114.141.171:8990",
-          severUrlActive: "http://47.114.141.171:6325/rylBGM",
+          severUrlActive: "http://47.114.141.171:8990/rylBGM",
           visiblePartner: false,
           current: 1,
           totalNum: 20,
